# summaryoutube

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  main.py  pyproject.toml
backend/src/: crud.py  database.py  main.py  models.py  seeder.py  youtube_api.py
backend/src/routers/: tags.py  videos.py
backend/tests/: test_crud.py  test_main.py  test_youtube_api.py
frontend/: Dockerfile  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx
frontend/src/components/: TagMultiSelect.jsx  VideoDetail.jsx  VideoForm.jsx  VideoItem.jsx  VideoList.jsx
