[project]
name = "backend"
version = "0.1.0"
dependencies = [
    "fastapi",
    "uvicorn",
    "psycopg2-binary",
    "google-api-python-client>=2.174.0",
    "youtube-transcript-api",
    "pytest",
    "pytest-mock",
    "ipykernel>=6.30.1",
    "httpx>=0.28.1",
    "yt-dlp>=2025.8.22",
    "google-cloud-speech>=2.33.0",
    "google-cloud-storage>=2.18.0",
    "sqlalchemy>=2.0.43",
]
